@@ -1,4 +1,6 @@
 2006-03-19  Daichi Kawahata <daichi@xfce.org>
 
+	* bg.po, ja.po, xfce4-xkb-plugin.pot: Added translatable strings.
 	* ChangeLog, POTFILES.in, bg.po, ja.po, xfce4-xkb-plugin.pot:
 	  Initial import for i18n support.
+
